--- a/EVA_S6_Assignment_6A.ipynb
+++ b/EVA_S6_Assignment_6A.ipynb
@@ -27,6 +27,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C60-RCDil_0I",
+        "colab_type": "text"
+      },
+      "source": [
+        "# EVA (M6) Session6 Assignment 6A: \n",
+        "\n",
+        "Objective:\n",
+        "\n",
+        "\n",
+        "\n",
+        "> After training the crude network, note down the accuracy as base accuracy for Epochs = 100\n",
+        "\n",
+        "> Fix the crude network by considering the following:\n",
+        "> * remove dense\n",
+        "> * add layers required to reach RF\n",
+        "> * fix kernel scaleup and down (1x1)\n",
+        "> * see if all dropouts are properly placed\n",
+        "> * follow the guidelines we discussed in the class\n",
+        "\n",
+        "Get accuracy more than the base accuracy in less number 100 epochs."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "KkwXnw9OfHZl",
